--- a/libft_externat/Libft/Makefile
+++ b/libft_externat/Libft/Makefile
@@ -7,9 +7,17 @@ LIBC =	ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c \
 ADDITIONAL =	ft_itoa.c ft_putchar_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_putstr_fd.c \
 				ft_split.c ft_strjoin.c ft_strmapi.c ft_strtrim.c ft_substr.c ft_striteri.c
 
+BONUS =	ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c \
+		ft_lstdelone.c ft_lstiter.c ft_lstlast.c \
+		ft_lstmap.c ft_lstnew.c ft_lstsize.c
+
 SRCS = ${LIBC} ${ADDITIONAL}
 
+SRCSALL = ${LIBC} ${ADDITIONAL} ${BONUS}
+
 OBJS = ${SRCS:.c=.o}
+
+OBJSALL = ${SRCSALL:.c=.o} 
 
 LIB = libft.a
 
@@ -23,10 +31,13 @@ CFLAGS = -Wall -Werror -Wextra -I ./
 ${LIB}:	${OBJS}
 		ar -rsc ${LIB} ${OBJS}
 
+bonus:	${OBJSALL}
+		ar -rsc ${LIB} ${OBJSALL}
+
 all: 	${LIB}
 
 clean:	
-		rm -f ${OBJS}
+		rm -f ${OBJSALL}
 
 fclean:	clean;
 		rm -f ${LIB}
